# QwGeant4

./: CMakeLists.txt  GNUmakefile  GetQweakSimVersion.cmake  MD9_Run1.in  MD9_submit.sh  QweakSim.root  QweakSimG4  QweakSimG4.cc  QweakSimGeant4.vpj  QweakSimGeant4.vpw  QweakSimGeant4.vtg  QweakSimRoot.cc  env_jlabcue  ep_elastic.root  ep_event.root  g4jsub.pl  g4out.ps  gui.mac  myCheck.mac  myLightWeight_Al_DS_submit.sh  myLightWeight_Al_US_submit.sh  myLightWeight_IdealPos_submit.sh  myLightWeight_MagRot45deg_submit.sh  myLightWeight_MagRot90deg_submit.sh  myLightWeight_Run1_noDC.in  myLightWeight_Run1_submit.sh  myLightWeight_Run2_submit.sh  myLightWeight_submit.sh  myPosDirScan_submit.sh  myQtorScan.in  myQtorScan_submit.sh  myQweakConfiguration.mac  myQweakConfiguration_Mag45.mac  myQweakConfiguration_Mag90.mac  myQweakConfiguration_noRaster.mac  myQweakConfiguration_run1.mac  myQweakConfiguration_run2.mac  myRun.mac  myRun_Al.mac  myValgrind.mac  (+6 more)
GDML/: qweak.gdml
analysis/: Al_Rates.C  Al_Schwinger_Gen7_Rates.C  Al_Schwinger_Gen7_Yields.C  Al_Yields.C  HitRatos.C  LoopOverEvents.C  SimLightWeightingAsymmetry.C  SimPreScatter_KE.C  SimQ2.C  SimVertexKE.C  SimVertexTheta.C  SimulationAnalPositionAndAngle.C  polarization.C
include/: Alinel_crsec_gen.h  EPEvent.h  EPEvent.hh  Geant4_include.hh  QweakSimAnalysis.hh  QweakSimAnalysisMessenger.hh  QweakSimBeamLine.hh  QweakSimCerenkovDetector.hh  QweakSimCerenkovDetectorMessenger.hh  QweakSimCerenkovDetector_PMTHit.hh  QweakSimCerenkovDetector_PMTSD.hh  QweakSimCerenkov_DetectorHit.hh  QweakSimCerenkov_DetectorSD.hh  QweakSimCerenkov_PMTHit.hh  QweakSimCerenkov_PMTSD.hh  QweakSimCerenkov_RadiatorHit.hh  QweakSimCerenkov_RadiatorSD.hh  QweakSimCollimator.hh  QweakSimCollimatorMessenger.hh  QweakSimCollimatorSupport.hh  QweakSimColorDefinitions.hh  QweakSimDetectorConstruction.hh  QweakSimDetectorMessenger.hh  QweakSimEPEvent.hh  QweakSimEPEventMessenger.hh  QweakSimEventAction.hh  QweakSimEventActionMessenger.hh  QweakSimG3Ntuple.hh  QweakSimG3NtupleReader.hh  QweakSimGDMLGeometry.hh  QweakSimGDMLGeometryMessenger.hh  (+110 more)
(+1109 files in other folders)
